--- a/app/src/main/res/layout/activity_device_config.xml
+++ b/app/src/main/res/layout/activity_device_config.xml
@@ -161,16 +161,16 @@
                         android:id="@+id/ll_brightness_debug"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/tv_label_brightness"
                         android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@id/tv_label_brightness"
                         android:orientation="horizontal"
-                        android:visibility="invisible" >
+                        android:visibility="invisible">
 
                         <TextView
                             android:id="@+id/tv_brightness_decrease"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="decrease"/>
+                            android:text="decrease" />
 
                         <TextView
                             android:id="@+id/tv_brightness"
@@ -183,7 +183,7 @@
                             android:id="@+id/tv_brightness_increase"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="increase"/>
+                            android:text="increase" />
                     </LinearLayout>
 
                     <SeekBar
@@ -287,7 +287,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
-                    android:paddingVertical="@dimen/device_setting_item_padding_vertical">
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/tv_label_font_size"
@@ -384,7 +385,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
-                    android:paddingVertical="@dimen/device_setting_item_padding_vertical">
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical"
+                    android:visibility="gone">
 
                     <androidx.appcompat.widget.SwitchCompat
                         android:id="@+id/switch_simplified_mode_enabled"
@@ -446,7 +448,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
-                    android:paddingVertical="@dimen/device_setting_item_padding_vertical">
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical"
+                    android:visibility="gone">
 
                     <androidx.appcompat.widget.SwitchCompat
                         android:id="@+id/switch_wear_detection_enabled"
@@ -583,6 +586,84 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/rl_container_auto_sleep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_effect"
+                    android:clickable="true"
+                    android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical_large">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/title_app_settings_auto_sleep"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/summery_auto_sleep"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_auto_sleep"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/venus_green"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_container_auto_poweroff"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_effect"
+                    android:clickable="true"
+                    android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical_large">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/title_app_settings_auto_poweroff"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/summery_auto_poweroff"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_auto_poweroff"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/venus_green"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:id="@+id/rl_container_trans_show_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -664,6 +745,44 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/rl_container_stt_engine"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_effect"
+                    android:clickable="true"
+                    android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical_large">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="STT Engine"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/iv_go_stt_engine"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:padding="3dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/baseline_arrow_forward_ios_24" />
+
+                    <TextView
+                        android:id="@+id/tv_stt_engine"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="5dp"
+                        android:layout_toStartOf="@id/iv_go_stt_engine"
+                        android:textColor="@color/venus_green"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:id="@+id/rl_container_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -737,6 +856,162 @@
                         android:layout_centerVertical="true"
                         android:layout_marginEnd="5dp"
                         android:layout_toStartOf="@id/iv_go_exhibit"
+                        android:textColor="@color/blue_sky"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_container_custom_c"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_effect"
+                    android:clickable="true"
+                    android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical_large">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="custom_c"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/iv_go_custom_c"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="15dp"
+                        android:padding="3dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/baseline_arrow_forward_ios_24" />
+
+                    <TextView
+                        android:id="@+id/tv_custom_c"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="5dp"
+                        android:layout_toStartOf="@id/iv_go_custom_c"
+                        android:textColor="@color/blue_sky"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_container_custom_d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_effect"
+                    android:clickable="true"
+                    android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical_large">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="custom_d"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/iv_go_custom_d"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="15dp"
+                        android:padding="3dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/baseline_arrow_forward_ios_24" />
+
+                    <TextView
+                        android:id="@+id/tv_custom_d"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="5dp"
+                        android:layout_toStartOf="@id/iv_go_custom_d"
+                        android:textColor="@color/blue_sky"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_container_custom_e"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_effect"
+                    android:clickable="true"
+                    android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical_large">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="custom_e"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/iv_go_custom_e"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="15dp"
+                        android:padding="3dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/baseline_arrow_forward_ios_24" />
+
+                    <TextView
+                        android:id="@+id/tv_custom_e"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="5dp"
+                        android:layout_toStartOf="@id/iv_go_custom_e"
+                        android:textColor="@color/blue_sky"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_container_custom_f"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ripple_effect"
+                    android:clickable="true"
+                    android:paddingHorizontal="@dimen/device_setting_item_padding_horizontal"
+                    android:paddingVertical="@dimen/device_setting_item_padding_vertical_large">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="custom_f"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/iv_go_custom_f"
+                        android:layout_width="28dp"
+                        android:layout_height="28dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="15dp"
+                        android:padding="3dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/baseline_arrow_forward_ios_24" />
+
+                    <TextView
+                        android:id="@+id/tv_custom_f"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="5dp"
+                        android:layout_toStartOf="@id/iv_go_custom_f"
                         android:textColor="@color/blue_sky"
                         android:textSize="18dp" />
                 </RelativeLayout>
