--- a/app/src/main/res/layout/activity_stt.xml
+++ b/app/src/main/res/layout/activity_stt.xml
@@ -49,7 +49,7 @@
     <RelativeLayout
         android:id="@+id/rl_footer"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="15dp">
 
@@ -63,6 +63,35 @@
             app:lottie_autoPlay="true"
             app:lottie_fileName="audio_wave.json"
             app:lottie_loop="true" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/lav_audio_track"
+            android:layout_centerHorizontal="true"
+            android:layout_marginHorizontal="20dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="字号" />
+
+            <SeekBar
+                android:id="@+id/seekBar_font_size"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:max="30"
+                android:progress="10" />
+
+            <TextView
+                android:id="@+id/tv_font_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="20" />
+        </LinearLayout>
     </RelativeLayout>
 
     <RelativeLayout
